Fixed Spacing with nav bar

--- a/footer-styles.css
+++ b/footer-styles.css
@@ -20,7 +20,7 @@
 /* The company logo */
 
 .footer-distributed h3{
-	color:  #2D90A9;
+	color: silver;
 	font: normal 36px "sans-serif";
 	margin: 0 0 10px;
 }
